test_programs/compile_failure/noirc_frontend_tests_cannot_assign_to_nested_struct/src/main.nr

    mod foo {
        pub struct bar {}
    }

    fn main() {
        foo::bar = 1;
    }
    